Rename package name

--- a/packages/pordee-theme/package.json
+++ b/packages/pordee-theme/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@frontity/mars-theme",
+  "name": "@frontity/pordee-theme",
   "version": "1.6.1",
-  "description": "A starter theme for Frontity",
+  "description": "Pordeetorjai",
   "keywords": [
     "frontity",
     "frontity-theme"
