--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@frontity/pordee-theme": "./packages/pordee-theme",
     "@frontity/tiny-router": "^1.4.4",
     "@frontity/wp-source": "^1.11.6",
-    "frontity": "^1.17.1"
+    "frontity": "^1.17.1",
+    "smoothscroll-polyfill": "^0.4.4"
   }
 }
