--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@frontity/tiny-router": "^1.4.4",
     "@frontity/wp-source": "^1.11.6",
     "frontity": "^1.17.1",
+    "react-share": "^4.4.0",
     "smoothscroll-polyfill": "^0.4.4"
   }
 }
